DotnetCore/WebAPIDocker/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapi-dockerkube
spec:
  backend:
    serviceName: webapi-dockerkube
    servicePort: 80
